# elaborato_senoner_jay

./: BankAccount.cpp  BankAccount.h  CMakeLists.txt  Date.cpp  Date.h  Hour.cpp  Hour.h  Transaction.cpp  Transaction.h  main.cpp
src/: transactions_file.txt
test/: BankAccountFixture.cpp  CMakeLists.txt  DateFixture.cpp  DateTests.cpp  HourFixture.cpp  HourTests.cpp  TransactionFixture.cpp  runAllTests.cpp
test/lib/googletest/docs/: gmock_cook_book.md
test/lib/googletest/docs/reference/: actions.md  testing.md
test/lib/googletest/googletest/include/gtest/: gtest.h
test/lib/googletest/googletest/src/: gtest.cc
